# dynamic_obstacle_detector

./: README.md
dynamic_msg/msg/: DynamicObstacleStamped.msg
dynamic_msgs/: CMakeLists.txt  package.xml
dynamic_msgs/msg/: DynamicObstacles.msg
dynamic_obstacles/: CMakeLists.txt  README.md  package.xml
dynamic_obstacles/launch/: dynamic_obs_detector.launch.py
dynamic_obstacles/src/: dynamic_obstacle_detector.cpp  dynamic_obstacle_detector_ros.cpp  obstacle_kf.hpp
people_msgs/: CMakeLists.txt  package.xml
