<package format="3">
  <name>dynamic_msgs</name>
  <version>1.3.0</version>
  <description>
    Descrição do pacote dynamic_msgs
  </description>
  <maintainer email="miguellopes54954@example.com">Miguelito</maintainer>
  <license>BSD</license>

  <author>Miguelito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>backward_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
