<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacles</name>
  <version>1.0.0</version>
  <description>The dynamic_obstacle_detector package</description>

  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/robotics-upo/dynamic_obstacle_detector</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>people_msgs</depend>
  <depend>visualization_msgs</depend>     
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
